page now lists the first 10 results

--- a/index.html
+++ b/index.html
@@ -1,189 +1,38 @@
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="favicon.ico" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <script defer="" src="js/app.js"></script>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css"
-    />
-    <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/style.css" />
-    <title>MITTFlix</title>
-  </head>
-  <body>
-    <div id="root">
-      <header class="header">
-        <a href="/">
-          <img
-            src="https://fontmeme.com/permalink/190707/fd4735271a0d997cbe19a04408c896fc.png"
-            alt="netflix-font"
-            border="0"
-          />
-        </a>
-        <form id="search" class="search">
-          <input type="search" placeholder="Search for a title..." value="" />
-        </form>
-      </header>
-      <div class="titleList">
-        <div class="title">
-          <div class="titles-wrapper">
-            <div class="movie">
-              <img
-                src="https://m.media-amazon.com/images/M/MV5BZGJmYmY1ODQtZmUyMC00YWFjLWE0ZDQtZGM5YWI4NDc4MjQwXkEyXkFqcGdeQXVyNzg5OTk2OA@@._V1_SX300.jpg"
-              />
-              <div class="overlay">
-                <div class="title">
-                  Beastie Boys: Fight for Your Right Revisited
-                </div>
-                <div class="rating">8.0/10</div>
-                <div class="plot">
-                  Following the conclusion of the storyline in the "Fight For
-                  Your Right" music video, the Beasties break into a liquor
-                  store, drop acid with groupies, and get into a breakdance
-                  competition with time-traveling future versions of themselves.
-                </div>
-              </div>
-            </div>
-            <div class="movie">
-              <img
-                src="https://m.media-amazon.com/images/M/MV5BMTY1ODMxODE3Ml5BMl5BanBnXkFtZTgwNzY3MzExNTE@._V1_SX300.jpg"
-              />
-              <div class="overlay">
-                <div class="title">Love at First Fight</div>
-                <div class="rating">6.6/10</div>
-                <div class="plot">
-                  Between his friends and the family business, Arnaud's summer
-                  looks set to be a peaceful one. Peaceful until he runs into
-                  Madeleine, as beautiful as she is brusque, a concrete block of
-                  tensed muscles and doomsday prophecies.
-                </div>
-              </div>
-            </div>
-            <div class="movie">
-              <img
-                src="https://m.media-amazon.com/images/M/MV5BNDlhMjljNTctMDI2MS00ODdkLWE1MjktN2IwOTg2NzU0ZWQ0XkEyXkFqcGdeQXVyNTAyODkwOQ@@._V1_SX300.jpg"
-              />
-              <div class="overlay">
-                <div class="title">Asterix and the Big Fight</div>
-                <div class="rating">6.4/10</div>
-                <div class="plot">
-                  The druid is accidentally hit by a menhir thrown by Obelix and
-                  loses his mind and memory.
-                </div>
-              </div>
-            </div>
-            <div class="movie">
-              <img
-                src="https://m.media-amazon.com/images/M/MV5BMTg3NjMzOTExNl5BMl5BanBnXkFtZTcwNTY4ODc3Mg@@._V1_SX300.jpg"
-              />
-              <div class="overlay">
-                <div class="title">Bring It On: Fight to the Finish</div>
-                <div class="rating">5.2/10</div>
-                <div class="plot">
-                  Lina Cruz and her family move from the urban streets of East
-                  Los Angeles to the sunny beach town of Malibu - where at her
-                  new school, she attempts to beat competitive cheer coach Avery
-                  in the Spirit Championships.
-                </div>
-              </div>
-            </div>
-            <div class="movie">
-              <img
-                src="https://m.media-amazon.com/images/M/MV5BNTY4MDgwOTI3M15BMl5BanBnXkFtZTgwNjYxMjU3NjE@._V1_SX300.jpg"
-              />
-              <div class="overlay">
-                <div class="title">
-                  Winter on Fire: Ukraine's Fight for Freedom
-                </div>
-                <div class="rating">8.4/10</div>
-                <div class="plot">
-                  A documentary on the unrest in Ukraine during 2013 and 2014,
-                  as student demonstrations supporting European integration grew
-                  into a violent revolution calling for the resignation of
-                  President Viktor F. Yanukovich.
-                </div>
-              </div>
-            </div>
-            <div class="movie">
-              <img
-                src="https://m.media-amazon.com/images/M/MV5BNDk2ZDZmZGUtNTlmNS00YzU0LWI1MDgtYzg4MzgzZWYwYTY2XkEyXkFqcGdeQXVyMTY5Nzc4MDY@._V1_SX300.jpg"
-              />
-              <div class="overlay">
-                <div class="title">Why We Fight</div>
-                <div class="rating">8.0/10</div>
-                <div class="plot">
-                  Is American foreign policy dominated by the idea of military
-                  supremacy? Has the military become too important in American
-                  life? Jarecki's shrewd and intelligent polemic would seem to
-                  give an affirmative answer to each of these questions.
-                </div>
-              </div>
-            </div>
-            <div class="movie">
-              <img
-                src="https://m.media-amazon.com/images/M/MV5BZmE1NzY4N2YtMDNlNS00ZDE0LTkyZTQtODA3YmEwOTE2ZjE3XkEyXkFqcGdeQXVyNzI1NzMxNzM@._V1_SX300.jpg"
-              />
-              <div class="overlay">
-                <div class="title">Ip Man: The Final Fight</div>
-                <div class="rating">6.2/10</div>
-                <div class="plot">
-                  In postwar Hong Kong, legendary Wing Chun grandmaster Ip Man
-                  is reluctantly called into action once more, when what begin
-                  as simple challenges from rival kung fu styles soon draw him
-                  into ...
-                </div>
-              </div>
-            </div>
-            <div class="movie">
-              <img
-                src="https://m.media-amazon.com/images/M/MV5BNDM2YmM2MzktYmExOS00N2QxLTkwMGMtNmEyZWY0N2NhMGJlXkEyXkFqcGdeQXVyMTkxNjUyNQ@@._V1_SX300.jpg"
-              />
-              <div class="overlay">
-                <div class="title">The Good Fight</div>
-                <div class="rating">8.3/10</div>
-                <div class="plot">
-                  When Diane Lockhart's life savings are lost, she must start
-                  from scratch at a new firm.
-                </div>
-              </div>
-            </div>
-            <div class="movie">
-              <img
-                src="https://m.media-amazon.com/images/M/MV5BMTg0NzkyMjE5NF5BMl5BanBnXkFtZTgwMDE5NTg3MDI@._V1_SX300.jpg"
-              />
-              <div class="overlay">
-                <div class="title">Fist Fight</div>
-                <div class="rating">5.6/10</div>
-                <div class="plot">
-                  When one school teacher unwittingly causes another teacher's
-                  dismissal, he is challenged to an after-school fight.
-                </div>
-              </div>
-            </div>
-            <div class="movie">
-              <img
-                src="https://m.media-amazon.com/images/M/MV5BMmEzNTkxYjQtZTc0MC00YTVjLTg5ZTEtZWMwOWVlYzY0NWIwXkEyXkFqcGdeQXVyNzkwMjQ5NzM@._V1_SX300.jpg"
-              />
-              <div class="overlay">
-                <div class="title">Fight Club</div>
-                <div class="rating">8.8/10</div>
-                <div class="plot">
-                  An insomniac office worker and a devil-may-care soapmaker form
-                  an underground fight club that evolves into something much,
-                  much more.
-                </div>
-              </div>
-            </div>
-          </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="shortcut icon" href="favicon.ico" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <script defer="" src="js/app.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="css/reset.css" />
+  <link rel="stylesheet" href="css/style.css" />
+  <title>MITTFLIX</title>
+</head>
+
+<body>
+  <div id="root">
+    <header class="header">
+      <a href="/">
+        <img src="https://fontmeme.com/permalink/190707/fd4735271a0d997cbe19a04408c896fc.png" alt="netflix-font" border="0" />
+      </a>
+      <form id="search" class="search">
+        <input type="search" placeholder="Search for a title..." value="" />
+      </form>
+    </header>
+    <div class="titleList">
+      <div class="title">
+        <div class="titles-wrapper">
         </div>
       </div>
-
-      <div class="pagination">
-        <button id="next">Next Page<i class="fa fa-chevron-right"></i></button>
-      </div>
     </div>
-  </body>
+
+    <div class="pagination">
+      <button id="next">Next Page<i class="fa fa-chevron-right"></i></button>
+    </div>
+  </div>
+</body>
+
 </html>
