--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     </div>
 
     <div class="pagination">
+      <button id="prev"><i class="fa fa-chevron-left"></i>Prev Page</button>
       <button id="next">Next Page<i class="fa fa-chevron-right"></i></button>
     </div>
   </div>
