--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
 
     <div class="pagination">
       <button id="prev"><i class="fa fa-chevron-left"></i>Prev Page</button>
+      <ul class="page-number">
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+        <li>4</li>
+      </ul>
       <button id="next">Next Page<i class="fa fa-chevron-right"></i></button>
     </div>
   </div>
